--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
   height: 100%;
   width: 100%;
   margin: 0;
-  background: #C7C7E9;
+  background: black;
 }
 
 /* Set header image and size */
@@ -77,6 +77,7 @@ nav a:active {
 /* Main body text color */
 main {
   color: #2f2f2f;
+  background: #C7C7E9;
 }
 
 /* Setting sections to be in the middle of the page with space either side */
